clusters/homelab/apps/2048/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "2048"
  labels:
    expose-public: "true"
