clusters/homelab/apps/2048/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: game-2048
  namespace: "2048"
spec:
  parentRefs:
    - name: cf-tunnel
      namespace: kube-system
  hostnames:
    - 2048.tylerrosnett.com
  rules:
    - backendRefs:
        - name: game-2048
          port: 80
